Update opções menu

--- a/html/index.html
+++ b/html/index.html
@@ -21,7 +21,7 @@
     <!-- FONTE - FIM -->
 
     <!-- CSS -->
-    <link rel="stylesheet" href="../assets/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <!-- CSS - FIM -->
 
     <title>Mesinha</title>
@@ -64,5 +64,6 @@
 
         </div>
     </section>
+
 </body>
 </html>
